--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.0"
+  },
+  "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "node"
   }
 }
